tests/snapshots/test_valid_samples__arithmetic.snap
---
source: tests/test_valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i64 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %0)
  ret i64 11
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

