tests/snapshots/test_valid_samples__basic_arithmetic_optimized_assembly.snap
---
source: tests/test_valid_samples.rs
expression: output
---
	.text
	.def	@feat.00;
	.scl	3;
	.type	0;
	.endef
	.globl	@feat.00
.set @feat.00, 0
	.file	"main"
	.def	main;
	.scl	2;
	.type	32;
	.endef
	.globl	main
	.p2align	4, 0x90
main:
	movl	$11, %eax
	retq


