tests/snapshots/test_valid_samples__nested_loop_optimized.snap
---
source: tests/test_valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i64 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  br label %loop

loop:                                             ; preds = %endloop1, %entry
  %.0 = phi i64 [ 0, %entry ], [ %11, %endloop1 ]
  %1 = call ptr @llvm.stacksave()
  %2 = icmp eq i64 %.0, 10
  br i1 %2, label %then, label %otherwise

then:                                             ; preds = %loop
  %3 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %1)
  br label %endloop

otherwise:                                        ; preds = %loop
  br label %endif

endif:                                            ; preds = %otherwise
  %4 = alloca i64, align 8
  store i64 0, ptr %4, align 4
  br label %loop2

loop2:                                            ; preds = %endif3, %endif
  %5 = call ptr @llvm.stacksave()
  %6 = load i64, ptr %4, align 4
  %7 = icmp eq i64 %6, 10
  br i1 %7, label %then5, label %otherwise4

then5:                                            ; preds = %loop2
  %8 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %5)
  br label %endloop1

otherwise4:                                       ; preds = %loop2
  br label %endif3

endif3:                                           ; preds = %otherwise4
  %9 = load i64, ptr %4, align 4
  %10 = add i64 %9, 1
  store i64 %10, ptr %4, align 4
  call void @llvm.stackrestore(ptr %5)
  br label %loop2

endloop1:                                         ; preds = %then5
  %11 = add i64 %.0, 1
  call void @llvm.stackrestore(ptr %1)
  br label %loop

endloop:                                          ; preds = %then
  call void @llvm.stackrestore(ptr %0)
  ret i64 0
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

