tests/snapshots/test_valid_samples__nested_loop_optimized_assembly.snap
---
source: tests/test_valid_samples.rs
expression: output
---
	.text
	.def	@feat.00;
	.scl	3;
	.type	0;
	.endef
	.globl	@feat.00
.set @feat.00, 0
	.file	"main"
	.def	main;
	.scl	2;
	.type	32;
	.endef
	.globl	main
	.p2align	4, 0x90
main:
.seh_proc main
	pushq	%rbp
	.seh_pushreg %rbp
	movq	%rsp, %rbp
	.seh_setframe %rbp, 0
	.seh_endprologue
	xorl	%ecx, %ecx
	jmp	.LBB0_1
	.p2align	4, 0x90
.LBB0_4:
	incq	%rcx
	movq	%rdx, %rsp
.LBB0_1:
	cmpq	$10, %rcx
	je	.LBB0_6
	movq	%rsp, %rdx
	movl	$16, %eax
	callq	__chkstk
	subq	%rax, %rsp
	movq	%rsp, %rax
	movq	$0, (%rax)
	cmpq	$10, (%rax)
	je	.LBB0_4
	.p2align	4, 0x90
.LBB0_5:
	incq	(%rax)
	cmpq	$10, (%rax)
	jne	.LBB0_5
	jmp	.LBB0_4
.LBB0_6:
	xorl	%eax, %eax
	movq	%rbp, %rsp
	popq	%rbp
	retq
	.seh_endproc


