tests/snapshots/test_valid_samples__sum_loop.snap
---
source: tests/test_valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i64 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  %1 = alloca i64, align 8
  store i64 0, ptr %1, align 4
  br label %loop

loop:                                             ; preds = %endif, %entry
  %2 = call ptr @llvm.stacksave()
  %3 = load i64, ptr %1, align 4
  %4 = icmp eq i64 %3, 10
  br i1 %4, label %then, label %otherwise

then:                                             ; preds = %loop
  %5 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %2)
  br label %endloop

otherwise:                                        ; preds = %loop
  br label %endif

endif:                                            ; preds = %otherwise
  %6 = load i64, ptr %1, align 4
  %7 = add i64 %6, 1
  store i64 %7, ptr %1, align 4
  call void @llvm.stackrestore(ptr %2)
  br label %loop

endloop:                                          ; preds = %then
  %8 = load i64, ptr %1, align 4
  call void @llvm.stackrestore(ptr %0)
  ret i64 %8
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

