tests/snapshots/test_valid_samples__sum_loop_optimized.snap
---
source: tests/test_valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i64 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  br label %loop

loop:                                             ; preds = %endif, %entry
  %.0 = phi i64 [ 0, %entry ], [ %4, %endif ]
  %1 = call ptr @llvm.stacksave()
  %2 = icmp eq i64 %.0, 10
  br i1 %2, label %then, label %otherwise

then:                                             ; preds = %loop
  %3 = call ptr @llvm.stacksave()
  call void @llvm.stackrestore(ptr %1)
  br label %endloop

otherwise:                                        ; preds = %loop
  br label %endif

endif:                                            ; preds = %otherwise
  %4 = add i64 %.0, 1
  call void @llvm.stackrestore(ptr %1)
  br label %loop

endloop:                                          ; preds = %then
  call void @llvm.stackrestore(ptr %0)
  ret i64 %.0
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

