tests/snapshots/test_valid_samples__sum_loop_optimized_assembly.snap
---
source: tests/test_valid_samples.rs
expression: output
---
	.text
	.def	@feat.00;
	.scl	3;
	.type	0;
	.endef
	.globl	@feat.00
.set @feat.00, 0
	.file	"main"
	.def	main;
	.scl	2;
	.type	32;
	.endef
	.globl	main
	.p2align	4, 0x90
main:
	xorl	%eax, %eax
	cmpq	$10, %rax
	je	.LBB0_2
	.p2align	4, 0x90
.LBB0_3:
	incq	%rax
	cmpq	$10, %rax
	jne	.LBB0_3
.LBB0_2:
	retq


